# service_principal_management

./: LICENSE  README.md  pyproject.toml  requirements.txt  run.exe.py  setup.py
modules/: __init__.py  code.py  logger.py  utils.py
