[project]
name = "service_principal_management"
version = "1.0.0"
description = "Databricks service principal automation"
authors = [{name = "Aarni Sillanpää"}]
readme = "README.md"
requires-python = ">=3.7"

[project.urls] 
"Source" = "https://github.com/ikidata/service_principal_management"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependencies]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}